src/test/deca/syntax/invalid/test_lex/hello_world/include_cycle_A.decah
#include "include_cycle_B.decah"